# musicscribe

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt  serve_public.sh
vibe_writer/: __init__.py  __main__.py  classifier.py  cli.py  config.py  env.py  songs.py  tones.py  web.py  writer.py
vibe_writer/data/: songs.json
vibe_writer/static/: index.html
